test/error/FieldPublic.fu
public class Test
{
	public int Foo; //ERROR: Field cannot be public
}
